# PAMSI

C1_1/: CMakeLists.txt
C1_1/inc/: stack_array.h  stack_list.h
C1_1/src/: main.cpp
C1_3/inc/: mod.h  pair.h  vector.h
C1_3/src/: main.cpp  mod.cpp
C3_3/: .gitignore  CMakeLists.txt  test
C3_3/inc/: BoardActions.h  Bot.h  Checkers.h  Evaluation.h
C3_3/paluch/: C3_3  broker  checkers_broker.c  checkers_client.c  client
C3_3/parameters/: 0.txt  1.txt  2.txt  3.txt
C3_3/src/: BoardActions.cpp  Bot.cpp  Checkers.cpp  Evaluation.cpp  main.cpp  moves
C_4/: CMakeLists.txt  Initialization.cpp  Initialization.h  StringSearch.cpp  StringSearch.h  SuffixArray.cpp  SuffixArray.h  Tests.cpp  Tests.h  Trie.cpp  Trie.h  collisions  collisions.csv  dnatest  main.cpp  sources  time_complexityBM.csv  time_complexityKMP.csv  time_complexityNAIVE.csv  time_complexityRABINKARP.csv  time_complexitySA.csv
C_4/test_files/: primes.csv
